@@ -24,6 +24,9 @@ namespace Marvel {
 	PyObject* get_dearpygui_version          (PyObject* self, PyObject* args, PyObject* kwargs);
 	PyObject* get_active_window              (PyObject* self, PyObject* args, PyObject* kwargs);
 	PyObject* add_character_remap            (PyObject* self, PyObject* args, PyObject* kwargs);
+
+	// docking
+	PyObject* enable_docking                 (PyObject* self, PyObject* args, PyObject* kwargs);
 	
 	// main viewport
 	PyObject* set_main_window_pos            (PyObject* self, PyObject* args, PyObject* kwargs);
