@@ -54,6 +54,12 @@ namespace Marvel {
         //io.ConfigFlags |= ImGuiConfigFlags_NavEnableKeyboard;  // Enable Keyboard Controls
         //io.ConfigFlags |= ImGuiConfigFlags_NavEnableGamepad;   // Enable Gamepad Controls
 
+        if(mvApp::GetApp()->m_docking)
+			io.ConfigFlags |= ImGuiConfigFlags_DockingEnable;
+		
+		if (mvApp::GetApp()->m_dockingShiftOnly)
+			io.ConfigDockingWithShift = true;
+
         // Setup style
         ImGui::StyleColorsDark();
 
