@@ -35,6 +35,9 @@ void mvWindowsWindow::show()
 	ImPlot::CreateContext();
 	ImGuiIO& io = ImGui::GetIO(); (void)io;
 
+	io.ConfigFlags |= ImGuiConfigFlags_DockingEnable;
+
+
 	// Setup Dear ImGui style
 	ImGui::StyleColorsDark();
 
